--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script> 
+    $(function(){
+      $("#includedContent").load("oooe/public/index.html"); 
+    });
+    </script> 
 </head>
 <body>
-    <div w3-include-html="oooe/public/index.html"></div>
+   <div id="includedContent"></div>
 </body>
 </html>
